--- a/module01/day10/lab-dom-race-car/styles/style.css
+++ b/module01/day10/lab-dom-race-car/styles/style.css
@@ -64,3 +64,16 @@ body button {
   border-radius: 5px;
   margin-bottom: 20px;
 }
+
+.spin {
+  -webkit-animation: spin 0.2s linear;
+}
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
