--- a/module01/day10/lab-dom-race-car/styles/style.css
+++ b/module01/day10/lab-dom-race-car/styles/style.css
@@ -1,6 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Danfo&display=swap");
 body {
   padding: 0;
   text-align: center;
+}
+h1 {
+  font-family: "danfo";
 }
 
 #game-intro {
