--- a/module03/day05/frontend/client/src/index.css
+++ b/module03/day05/frontend/client/src/index.css
@@ -1,3 +1,13 @@
 body {
   margin: 0;
+  background-color: black;
+}
+#logo {
+  color: rgb(12, 157, 157);
+  font-family: "Times New Roman", Times, serif !important;
+}
+#spinner {
+  height: 500px;
+  width: 500px;
+  background-color: rgb(16, 122, 122);
 }
